--- a/package.json
+++ b/package.json
@@ -10,42 +10,64 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:sendie.helloWorld"
+    "onView:requests",
+    "onCommand:sendie.sendRequest"
   ],
   "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "sendie.helloWorld",
-        "title": "Hello World"
+        "command": "sendie.sendRequest",
+        "title": "Send Request",
+        "icon": "$(extensions-refresh)"
       }
-    ]
+    ],
+    "views": {
+      "explorer": [
+        {
+          "id": "requests",
+          "name": "Requests"
+        }
+      ]
+    },
+    "menus": {
+      "editor/title": [
+        {
+          "when": "resourceFilename =~ /.*\\.sendie\\.json$/",
+          "command": "sendie.sendRequest",
+          "group": "navigation"
+        }
+      ],
+      "view/item/context": [
+        {
+          "command": "sendie.sendRequest",
+          "when": "view == requests && viewItem != folder",
+          "group": "inline"
+        }
+      ]
+    }
   },
   "scripts": {
-    "vscode:prepublish": "npm run package",
-    "compile": "webpack",
-    "watch": "webpack --watch",
-    "package": "webpack --mode production --devtool hidden-source-map",
-    "compile-tests": "tsc -p . --outDir out",
-    "watch-tests": "tsc -p . -w --outDir out",
-    "pretest": "npm run compile-tests && npm run compile && npm run lint",
+    "build": "webpack",
+    "dev": "webpack --watch",
     "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
+    "test": "jest",
+    "test:w": "jest --watch"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.2",
     "@types/vscode": "^1.73.0",
-    "@types/glob": "^7.2.0",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "16.x",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "eslint": "^8.20.0",
-    "glob": "^8.0.3",
-    "mocha": "^10.0.0",
-    "typescript": "^4.7.4",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
     "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "@vscode/test-electron": "^2.1.5"
+    "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "node-fetch": "^3.3.0"
   }
 }
