✨Add a half-baked JSON schema

--- a/package.json
+++ b/package.json
@@ -45,7 +45,13 @@
           "group": "inline"
         }
       ]
-    }
+    },
+    "jsonValidation": [
+      {
+        "fileMatch": "*.sendie.json",
+        "url": "./sendieJsonSchema.json"
+      }
+    ]
   },
   "scripts": {
     "build": "webpack",
