--- a/package.json
+++ b/package.json
@@ -46,6 +46,12 @@
         }
       ]
     },
+    "languages": [
+      {
+        "id": "yaml",
+        "firstLine": "# Sendie"
+      }
+    ],
     "jsonValidation": [
       {
         "fileMatch": "*.sendie.json",
@@ -76,6 +82,8 @@
   },
   "dependencies": {
     "glob": "^8.0.3",
-    "node-fetch": "^3.3.0"
+    "http-status-codes": "^2.2.0",
+    "node-fetch": "^3.3.0",
+    "yaml": "^2.2.1"
   }
 }
