📈 Update Json schema

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,7 @@
 
   "json.schemas": [
     {
-      "fileMatch": ["/*.sendie.json"],
+      "fileMatch": ["/*.sendie.json", "/*.sendie-context.json"],
       "url": "./sendieJsonSchema.json"
     }
   ]
