✨ Add some commands

--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
       {
         "command": "sendie.updateResponseDocument",
         "title": "Sendie: Update Response Document"
+      },
+      {
+        "command": "sendie.holdResponseDocument",
+        "title": "Sendie: Hold Response Document"
       }
     ],
     "viewsContainers": {
