--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,15 +12,15 @@ jobs:
   build-test:
     name: 🛠 Build and Test
     uses: ./.github/workflows/build-test.yaml
-  # bump-version:
-  #   name: 📈 Bump Package Version
-  #   if: github.ref == 'refs/heads/master'
-  #   needs: build-test
-  #   uses: ./.github/workflows/bump-version.yaml
-  #   secrets: inherit
-  # publish:
-  #   name: 🚀 Publish
-  #   if: github.ref == 'refs/heads/master'
-  #   needs: bump-version
-  #   uses: ./.github/workflows/publish.yaml
-  #   secrets: inherit
+  bump-version:
+    name: 📈 Bump Package Version
+    if: github.ref == 'refs/heads/master'
+    needs: build-test
+    uses: ./.github/workflows/bump-version.yaml
+    secrets: inherit
+  publish:
+    name: 🚀 Publish
+    if: github.ref == 'refs/heads/master'
+    needs: bump-version
+    uses: ./.github/workflows/publish.yaml
+    secrets: inherit
