✨ Add a create command and json validation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,8 +13,8 @@
 
   "json.schemas": [
     {
-      "fileMatch": ["/*.sendie.json", "/*.sendie-context.json"],
-      "url": "./sendieJsonSchema.json"
+      "fileMatch": ["/*.sendie.json"],
+      "url": "./schema/sendie.json"
     }
   ]
 }
