✨ Add context schema

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,11 @@
   "json.schemas": [
     {
       "fileMatch": ["/*.sendie.json"],
-      "url": "./schema/sendie.json"
+      "url": "./schema/request.json"
+    },
+    {
+      "fileMatch": ["/*.sendie-ctx.json"],
+      "url": "./schema/context.json"
     }
   ]
 }
